--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kyle Sugg · Project Portfolio</title>
+  <title>Kyle Sugg · Program Manager</title>
   <meta name="description" content="Former USMC ops leader turned PM—compressing timelines, reducing risk, and communicating with clarity using Lean + GenAI workflows." />
   <style>
     :root { --bg:#0a0a0a; --card:#141414; --muted:#9ca3af; --text:#f3f4f6; --accent:#ffffff; --border:#262626;}
@@ -32,9 +32,9 @@
 <body>
   <div class="nav">
     <div class="wrap navrow">
-      <strong>Kyle Sugg · Project/Operations</strong>
+      <strong>Kyle Sugg · Program Manager</strong>
       <div style="display:flex;gap:14px;font-size:14px">
-        <a href="#work">Work</a><a href="#skills">Skills</a><a href="#about">About</a><a href="#contact">Contact</a>
+        <a href="#work">Project Portolio</a><a href="#skills">Skills</a><a href="#about">About</a><a href="#contact">Contact</a>
       </div>
     </div>
   </div>
@@ -42,12 +42,13 @@
   <main class="wrap">
     <!-- HERO -->
     <section class="section" id="top">
-      <h1>Senior Operations & Program Leader</h1>
+      <h1>Senior Program Manager</h1>
       <div class="sp8"></div>
-      <p class="muted">Turning complex missions into measurable outcomes with Lean, Agile, and GenAI-enabled workflows.</p>
+      <p class="muted"><strong>Less chaos, more cadence.</strong></p>
+      <p class="muted">Lean, Agile, and GenAI playbooks that turn work into wins.</p>
       <div class="sp16"></div>
       <div class="kpis">
-        <div class="kpi"><dt>Teams Led</dt><dd>200+</dd></div>
+        <div class="kpi"><dt>Program Headcount Scope</dt><dd>200+</dd></div>
         <div class="kpi"><dt>Budget/Assets</dt><dd>$500K+</dd></div>
         <div class="kpi"><dt>Cycle Time ↓</dt><dd>25–40%</dd></div>
         <div class="kpi"><dt>COPQ Savings</dt><dd>$10K+/yr</dd></div>
