--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kyle Sugg · Program Manager</title>
-  <meta name="description" content="Former USMC ops leader turned PM—compressing timelines, reducing risk, and communicating with clarity using Lean + GenAI workflows." />
+  <meta name="description" content="U.S. Marine Corps PM transitioning to private sector Spring 2026—known for compressing timelines, reducing risk, and communicating with clarity using Lean + GenAI workflows." />
   <style>
     :root { --bg:#0a0a0a; --card:#141414; --muted:#9ca3af; --text:#f3f4f6; --accent:#ffffff; --border:#262626;}
-    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Arial}
-    a{color:var(--text);text-decoration:none} a:hover{opacity:.85}
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial}
+    a{color:var(--text);text-decoration:none}
+    a:hover{opacity:.85}
     .wrap{max-width:1100px;margin:0 auto;padding:24px}
     .nav{position:sticky;top:0;backdrop-filter:saturate(140%) blur(8px);border-bottom:1px solid var(--border);background:rgba(10,10,10,.7)}
     .navrow{display:flex;gap:20px;align-items:center;justify-content:space-between;padding:12px 0}
@@ -18,23 +20,33 @@
     @media(min-width:900px){.grid.cols-2{grid-template-columns:1fr 1fr}}
     .card{background:var(--card);border:1px solid var(--border);border-radius:18px;padding:18px}
     .tag{font-size:12px;text-transform:uppercase;color:var(--muted)}
-    h1{font-size:34px;line-height:1.2;margin:0} h2{font-size:24px;margin:0}
-    .muted{color:var(--muted)} .sp16{height:16px} .sp24{height:24px} .sp8{height:8px}
-    ul{margin:8px 0 0 18px} li{margin:4px 0}
+    h1{font-size:34px;line-height:1.2;margin:0}
+    h2{font-size:24px;margin:0}
+    .muted{color:var(--muted)}
+    .sp8{height:8px}
+    .sp16{height:16px}
+    .sp24{height:24px}
+    ul{margin:8px 0 0 18px}
+    li{margin:4px 0}
     footer{color:var(--muted);font-size:12px;padding:36px 0;text-align:center}
     .kpis{display:grid;grid-template-columns:repeat(4,1fr);gap:10px}
     @media(max-width:700px){.kpis{grid-template-columns:repeat(2,1fr)}}
     .kpi{background:#0f0f0f;border:1px solid var(--border);border-radius:14px;padding:12px}
-    .kpi dt{color:var(--muted);font-size:12px} .kpi dd{margin:6px 0 0;font-weight:700;font-size:22px}
+    .kpi dt{color:var(--muted);font-size:12px}
+    .kpi dd{margin:6px 0 0;font-weight:700;font-size:22px}
     .section{padding:28px 0}
+    /* Core skills pill buttons */
+    .pill{border:1px solid var(--border);background:#0f0f0f;border-radius:16px;padding:8px 12px;text-align:left}
+    .pill:focus{outline:2px solid #525252;outline-offset:2px}
+    .pill:hover{border-color:#525252;transition:all .15s ease}
   </style>
 </head>
 <body>
   <div class="nav">
     <div class="wrap navrow">
-      <strong>Kyle Sugg · Program Manager</strong>
+      <strong>Kyle Sugg · Senior Program Manager</strong>
       <div style="display:flex;gap:14px;font-size:14px">
-        <a href="#work">Project Portolio</a><a href="#skills">Skills</a><a href="#about">About</a><a href="#contact">Contact</a>
+        <a href="#work">Project Portfolio</a><a href="#skills">Skills</a><a href="#about">About</a><a href="#contact">Contact</a>
       </div>
     </div>
   </div>
@@ -58,7 +70,6 @@
       <span> </span>
       <a class="btn" href="resume.pdf">Download Résumé</a>
       <div class="sp8"></div>
-      <p class="muted" style="font-size:12px">Replace <code>resume.pdf</code> with your actual file name in this repo.</p>
     </section>
 
     <!-- WORK -->
@@ -74,7 +85,6 @@
           <h3>Scaled multi-site training ops</h3>
           <p class="muted">Led hybrid/Agile planning across dispersed sites; reduced lead time by 32% while meeting safety/quality SLAs.</p>
           <ul class="muted">
-            <li>OEE +12 pts via SMED-style changeover</li>
             <li>Risk burn-down with early triggers/mitigations</li>
             <li>AI-assisted status: one-slide decision signals</li>
           </ul>
@@ -85,7 +95,6 @@
           <h3>Reduce rework with DMAIC</h3>
           <p class="muted">Standardized work & visual management cut rework 18%; FPY ↑ to 96% ($10–25K annual savings).</p>
           <ul class="muted">
-            <li>SPC dashboards; Cpk 0.9 → 1.4</li>
             <li>Pareto + 5 Whys → root cause fix</li>
             <li>Playbook rolled out to 3 sites</li>
           </ul>
@@ -108,7 +117,6 @@
           <p class="muted">Zero cold-weather injuries; $700K gear shipped on schedule; validated 15 exercises across conditions.</p>
           <ul class="muted">
             <li>Risk triggers tied to real-time conditions</li>
-            <li>Supplier scorecards; on-time fill ↑ 20%</li>
             <li>After-action → retro → SOP updates</li>
           </ul>
         </article>
@@ -140,17 +148,43 @@
           <strong>Technology</strong>
           <ul class="muted">
             <li>GenAI for PM workflows</li>
-            <li>M365, SQL basics, dashboards</li>
-            <li>Jira/Confluence, Notion</li>
+            <li>Microsoft 365</li>
+            <li>MS Project</li>
+            <li>Dashboards</li>
           </ul>
         </div>
+      </div>
+
+      <!-- Core Skills Boxes -->
+      <div class="sp16"></div>
+      <h3 class="muted" style="margin:0 0 8px 0;">Core Skills</h3>
+      <div class="grid" style="grid-template-columns:repeat(2,1fr);gap:12px"
+           aria-labelledby="core-skills">
+        <button type="button" class="pill" aria-label="Skill: Program Management">Program Management</button>
+        <button type="button" class="pill" aria-label="Skill: Resource Constraints">Resource Constraints</button>
+        <button type="button" class="pill" aria-label="Skill: Risk Management">Risk Management</button>
+        <button type="button" class="pill" aria-label="Skill: Leadership">Leadership</button>
+        <button type="button" class="pill" aria-label="Skill: Milestones">Milestones</button>
+        <button type="button" class="pill" aria-label="Skill: Continuous Improvement">Continuous Improvement</button>
+        <button type="button" class="pill" aria-label="Skill: Stakeholder Management">Stakeholder Management</button>
+        <button type="button" class="pill" aria-label="Skill: Change Management">Change Management</button>
+        <button type="button" class="pill" aria-label="Skill: Solution Implementation">Solution Implementation</button>
+        <button type="button" class="pill" aria-label="Skill: Operational Strategy">Operational Strategy</button>
+        <button type="button" class="pill" aria-label="Skill: Compliance">Compliance</button>
+        <button type="button" class="pill" aria-label="Skill: Communication">Communication</button>
+        <button type="button" class="pill" aria-label="Skill: Information Security">Information Security</button>
+        <button type="button" class="pill" aria-label="Skill: Communication Tools">Communication Tools</button>
+        <button type="button" class="pill" aria-label="Skill: Team Support">Team Support</button>
+        <button type="button" class="pill" aria-label="Skill: Assessment">Assessment</button>
+        <button type="button" class="pill" aria-label="Skill: Timelines">Timelines</button>
+        <button type="button" class="pill" aria-label="Skill: Microsoft 365">Microsoft 365</button>
       </div>
     </section>
 
     <!-- ABOUT -->
     <section class="section" id="about">
       <h2>About</h2>
-      <p class="muted">Former U.S. Marine Corps operations leader translating mission discipline to business outcomes. I build systems that scale, coach teams, and obsess over measurable results. Edge: compress timelines, reduce risk, communicate with clarity under pressure.</p>
+      <p class="muted">U.S. Marine Corps ops and PM leader translating mission discipline to business outcomes. I build systems that scale, coach teams, and obsess over measurable results. Edge: compress timelines, reduce risk, communicate with clarity under pressure.</p>
     </section>
 
     <!-- CONTACT -->
@@ -169,3 +203,5 @@
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
+
+
