--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <p class="muted"><strong>Less chaos, more cadence.</strong></p>
       <p class="muted">Lean, Agile, and GenAI playbooks that turn work into wins.</p>
 
-      <!-- ABOUT moved up under the tagline/subhead -->
+      <!-- ABOUT placed under tagline -->
       <div class="sp16"></div>
       <section id="about" aria-labelledby="about-heading">
         <h2 id="about-heading">About</h2>
@@ -113,108 +113,10 @@
         <div class="kpi"><dt>COPQ Savings</dt><dd>$10K+/yr</dd></div>
       </div>
       <div class="sp16"></div>
-      <!-- Case Studies button removed -->
-      <a class="btn" href="resume.pdf">Download Résumé</a>
-      <div class="sp8"></div>
+      <!-- Resume button moved to Contact section -->
     </section>
 
     <!-- WORK -->
     <section class="section" id="work">
       <div style="display:flex;justify-content:space-between;align-items:flex-end;gap:16px">
-        <h2>Selected Work</h2>
-        <a class="muted" href="#contact">Let’s work together →</a>
-      </div>
-      <div class="sp16"></div>
-      <div class="grid cols-2">
-        <article class="card">
-          <div class="tag">Program Execution</div>
-          <h3>Scaled multi-site training ops</h3>
-          <p class="muted">Led hybrid/Agile planning across dispersed sites; reduced lead time by 32% while meeting safety/quality SLAs.</p>
-          <ul class="muted">
-            <li>Risk burn-down with early triggers/mitigations</li>
-            <li>AI-assisted status: one-slide decision signals</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <div class="tag">Operations Improvement</div>
-          <h3>Reduce rework with DMAIC</h3>
-          <p class="muted">Standardized work & visual management cut rework 18%; FPY ↑ to 96% ($10–25K annual savings).</p>
-          <ul class="muted">
-            <li>Pareto + 5 Whys → root cause fix</li>
-            <li>Playbook rolled out to 3 sites</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <div class="tag">AI for PM</div>
-          <h3>GenAI playbooks across PM domains</h3>
-          <p class="muted">Converted prompts into repeatable workflows for planning, delivery, measurement, and uncertainty—cutting admin time ~35%.</p>
-          <ul class="muted">
-            <li>Risk clustering & prioritization</li>
-            <li>Stakeholder updates → clear asks</li>
-            <li>Backlog grooming & RACI automation</li>
-          </ul>
-        </article>
-
-        <article class="card">
-          <div class="tag">Logistics & Readiness</div>
-          <h3>Arctic program readiness</h3>
-          <p class="muted">Zero cold-weather injuries; $700K gear shipped on schedule; validated 15 exercises across conditions.</p>
-          <ul class="muted">
-            <li>Risk triggers tied to real-time conditions</li>
-            <li>After-action → retro → SOP updates</li>
-          </ul>
-        </article>
-      </div>
-    </section>
-
-    <!-- SKILLS -->
-    <section class="section" id="skills">
-      <h2>Skills & Certifications</h2>
-      <div class="sp8"></div>
-      <div class="grid cols-2">
-        <div class="card">
-          <strong>Project Leadership</strong>
-          <ul class="muted">
-            <li>Hybrid/Agile/Waterfall delivery</li>
-            <li>Roadmapping, OKRs, risk management</li>
-            <li>Stakeholder alignment, exec comms</li>
-          </ul>
-        </div>
-        <div class="card">
-          <strong>Operations & Quality</strong>
-          <ul class="muted">
-            <li>Lean, Kaizen, 5S, SMED</li>
-            <li>Six Sigma (LSSYB; pursuing LSSGB)</li>
-            <li>SPC, MSA, DOE, root cause</li>
-          </ul>
-        </div>
-        <div class="card">
-          <strong>Technology</strong>
-          <ul class="muted">
-            <li>GenAI for PM workflows</li>
-            <li>Microsoft 365</li>
-            <li>MS Project</li>
-            <li>Dashboards</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section class="section" id="contact">
-      <h2>Let’s connect</h2>
-      <p class="muted">Have a role or project where disciplined execution and continuous improvement matter? I’d love to help.</p>
-      <div class="sp8"></div>
-      <a class="btn primary" href="mailto:your.email@example.com">Email Me</a>
-      <a class="btn" href="https://www.linkedin.com/in/your-handle">LinkedIn</a>
-      <a class="btn" href="portfolio.pdf">Download Portfolio (PDF)</a>
-      <p class="muted" style="font-size:12px">Replace links with your details. Add <code>portfolio.pdf</code> and <code>resume.pdf</code> to this repo.</p>
-    </section>
-  </main>
-
-  <footer>© <span id="y"></span> Kyle Sugg · Built on GitHub Pages</footer>
-  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
-</body>
-</html>
+        <h2>
